Add User data JSON file.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/home.css">
-
     <title>IPL INFO</title>
 </head>
 
@@ -18,8 +17,7 @@
         <div class="menu">
             <a href="index.html">Home</a>
             <a href="about.html">About IPL</a>
-            <a href="#">Add Team</a>
-            <a href="#">Add Player</a>
+            
         </div>
         <div class="search">
             <input type="search" value="Type here">
@@ -29,16 +27,16 @@
     <div class="bg"></div>
     <div>
         <div class="container">
-            <a href="teams/CSK.html" style="text-decoration: none;">
+            <!-- <a href="teams/CSK.html" style="text-decoration: none;">
                 <div class="card">
-                    <img src="photos/logos/CSK.png" alt="CSK_LOGO">
+                    <img src="photos/logos/CSK.png" alt="CSK_LOGO" id="teamlogo">
                     <div class="detail">
-                        <h3>Chennai Super Kings</h3>
-                        <p>Championship Won: 4</p>
+                        <h3 id="teamname">Chennai Super Kings</h3>
+                        <p id="cwon">Championship Won: 4</p>
                     </div>
                 </div>
-            </a>
-            <a href="teams/MI.html" style="text-decoration: none;">
+            </a> -->
+            <!-- <a href="teams/MI.html" style="text-decoration: none;">
                 <div class="card">
                     <img src="photos/logos/MI.png" alt="MI_LOGO">
                     <div class="detail">
@@ -118,9 +116,9 @@
                         <p>Championship Won: 0</p>
                     </div>
                 </div>
-            </a>
+            </a> -->
         </div>
     </div>
 </body>
-
+<script src="index.js"></script>
 </html>
