--- a/teams/KKR.html
+++ b/teams/KKR.html
@@ -72,8 +72,8 @@
             bottom: 90px;
             background-color: purple;
             color: gold;
-            text-align: center;
-            font-weight: 600;
+            text-align: start;
+            font-weight: 200;
         }
 
         .pcard:hover {
